# PPIW-Trading

./: .gitignore  CMakeLists.txt  config.template  deps_compile.sh  deps_sync.sh  mpd.hosts  mr_skeleton.py  network.host  remote_mkdir.sh  server_info.txt  sync.sh  user&pwd.txt
archive/: mr_skeleton.py
io_example/cpp/: Makefile  struct-write.cpp
src/: exchange.cpp  exchanger.cpp  output_diff.cpp  query_order.cpp  trader.cpp
src/common/: block_queue.hpp  config.cpp  config.h  config.hpp  console.hpp  global.hpp  loader.hpp  macros.h  monitor.hpp  sliding_window.hpp  thread.cpp  thread.h  type.hpp
src/exchange/: debug.hpp  exchange.cpp  exchange.h  exchange.hpp  order_receiver.cpp  order_receiver.h  record.hpp  stock_decl_book.hpp  stock_exchange.cpp  stock_exchange.h  stock_exchange.hpp  trade_sender.cpp  trade_sender.h
src/include/: debug.hpp  loader.hpp  record.hpp  timer.hpp  type.hpp
src/include/exchange/: exchange.hpp  stock_exchange.hpp
src/network/: msg_receiver.h  msg_sender.h  socket_client.cpp  socket_client.h  socket_connection.cpp  socket_connection.h  socket_server.cpp  socket_server.h  status.hpp
src/trader/: order_sender.cpp  order_sender.h  shared_trade_info.hpp  trade_receiver.cpp  trade_receiver.h  trader_controller.cpp  trader_controller.h
src/utils/: arch.h  assertion.hpp  block_queue.hpp  config.hpp  console.hpp  errors.hpp  logger2.hpp  timer.hpp  util.cpp  util.h
test/: Makefile  hdf5-read.cpp
